--- a/index.html
+++ b/index.html
@@ -36,6 +36,37 @@
     <section class="fd-wall" id="fd-wall">
       <!-- Tiles are injected by wall.js -->
     </section>
+
+    <section class="fd-qa">
+  <h2>What I Bring to a Business or Collaboration</h2>
+
+  <p><strong>What problem do you solve?</strong><br>
+  I help organizations move from AI curiosity to AI execution without creating risk,
+  confusion, or technical debt. Many businesses are overwhelmed by tools, vendors,
+  and hype. I provide clarity by translating strategy into deployable systems aligned
+  with governance, automation, and real operational needs.</p>
+
+  <p><strong>How are you different?</strong><br>
+  Most professionals focus on either technology or leadership. I work at the
+  intersection of both. I can speak with executives in outcomes and constraints,
+  then validate implementation at the system level instead of relying on assumptions
+  or buzzwords.</p>
+
+  <p><strong>What value do you provide immediately?</strong><br>
+  I reduce chaos. I identify what should be automated, what should be governed,
+  and what should not be built at all. This saves time, protects reputation,
+  and accelerates decision-making.</p>
+
+  <p><strong>Who do you work best with?</strong><br>
+  Teams that are scaling, adopting AI seriously, or dealing with operational
+  complexity. Especially leadership groups that need one accountable point of
+  truth instead of fragmented opinions.</p>
+
+  <p><strong>Why trust your judgment?</strong><br>
+  Because I don’t sell hype. I bring verified training, governance-first thinking,
+  and hands-on systems understanding. When I say yes, it’s buildable.
+  When I say no, it’s protection.</p>
+</section>
   </main>
 
   <!-- Simple lightbox for full cert view -->
