--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <!-- Tiles are injected by wall.js -->
     </section>
 
+    <hr class="fd-divider" />
+
     <section class="fd-qa">
   <h2>What I Bring to a Business or Collaboration</h2>
 
