--- a/index.html
+++ b/index.html
@@ -42,51 +42,24 @@
     <section class="fd-qa">
   <h2>What I Bring to a Business or Collaboration</h2>
 
-  <div class="fd-qa-grid">
-    <div class="fd-qa-block">
-      <h3>What problem do you solve?</h3>
-      <p>
-        I help organizations move from AI curiosity to AI execution without creating risk,
-        confusion, or technical debt. Many businesses are overwhelmed by tools, vendors,
-        and hype. I provide clarity by translating strategy into deployable systems aligned
-        with governance, automation, and real operational needs.
-      </p>
-    </div>
+  <h3>What problem do you solve?</h3>
+  <p>
+    I help organizations move from AI curiosity to AI execution without creating risk,
+    confusion, or technical debt...
+  </p>
 
-    <div class="fd-qa-block">
-      <h3>How are you different?</h3>
-      <p>
-        Most professionals focus on either technology or leadership. I work at the
-        intersection of both. I can speak with executives in outcomes and constraints,
-        then validate implementation at the system level instead of relying on assumptions
-        or buzzwords.
-      </p>
-    </div>
+  <h3>How are you different?</h3>
+  <p>Most professionals focus on either technology or leadership...</p>
 
-    <div class="fd-qa-block">
-      <h3>What value do you provide immediately?</h3>
-      <p>
-        I reduce chaos. I identify what should be automated, what should be governed, and
-        what should not be built at all. This saves time, protects reputation, and
-        accelerates decision-making.
-      </p>
-    </div>
+  <h3>What value do you provide immediately?</h3>
+  <p>I reduce chaos...</p>
 
-    <div class="fd-qa-block">
-      <h3>Who do you work best with?</h3>
-      <p>
-        Teams that are scaling, adopting AI seriously, or dealing with operational
-        complexity. Especially leadership groups that need one accountable point of truth
-        instead of fragmented opinions.
-      </p>
-    </div>
+  <h3>Who do you work best with?</h3>
+  <p>Teams that are scaling...</p>
 
-    <div class="fd-qa-block fd-qa-wide">
-      <h3>Why trust your judgment?</h3>
-      <p>
-        Because I don’t sell hype. I bring verified training, governance-first thinking,
-        and hands-on systems understanding. When I say yes, it’s buildable. When I say no,
-        it’s protection.
+  <h3>Why trust your judgment?</h3>
+  <p>Because I don’t sell hype...</p>
+</section>
       </p>
     </div>
   </div>
