--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </header>
 
-  <main class="fd-main">
+    <main class="fd-main">
     <section class="fd-intro">
       <h2>Certification Wall</h2>
       <p>
@@ -37,53 +37,46 @@
       <!-- Tiles are injected by wall.js -->
     </section>
 
-    <hr class="fd-divider" />
-
+    <!-- Q&A / Value Prop -->
     <section class="fd-qa">
-  <h2>What I Bring to a Business or Collaboration</h2>
+      <h2 class="fd-qa-title">What I Bring to a Business or Collaboration</h2>
 
-  <h3>What problem do you solve?</h3>
-  <p>
-    I help organizations move from AI curiosity to AI execution without creating risk,
-    confusion, or technical debt. Many businesses are overwhelmed by tools, vendors,
-    and hype. I provide clarity by translating strategy into deployable systems aligned
-    with governance, automation, and real operational needs.
-  </p>
-
-  <h3>How are you different?</h3>
-  <p>
-    Most professionals focus on either technology or leadership. I work at the
-    intersection of both. I can speak with executives in outcomes and constraints,
-    then validate implementation at the system level instead of relying on assumptions
-    or buzzwords.
-  </p>
-
-  <h3>What value do you provide immediately?</h3>
-  <p>
-    I reduce chaos. I identify what should be automated, what should be governed,
-    and what should not be built at all. This saves time, protects reputation,
-    and accelerates decision-making.
-  </p>
-
-  <h3>Who do you work best with?</h3>
-  <p>
-    Teams that are scaling, adopting AI seriously, or dealing with operational
-    complexity. Especially leadership groups that need one accountable point of truth
-    instead of fragmented opinions.
-  </p>
-
-  <h3>Why trust your judgment?</h3>
-  <p>
-    Because I don’t sell hype. I bring verified training, governance-first thinking,
-    and hands-on systems understanding. When I say yes, it’s buildable. When I say no,
-    it’s protection.
-  </p>
-</section>
+      <h3>What problem do you solve?</h3>
+      <p>
+        I help organizations move from AI curiosity to AI execution without creating risk,
+        confusion, or technical debt. Many businesses are overwhelmed by tools, vendors, and
+        hype. I provide clarity by translating strategy into deployable systems aligned with
+        governance, automation, and real operational needs.
       </p>
-    </div>
-  </div>
-</section>
-</section>
+
+      <h3>How are you different?</h3>
+      <p>
+        Most professionals focus on either technology or leadership. I work at the intersection
+        of both. I can speak with executives in outcomes and constraints, then validate
+        implementation at the system level instead of relying on assumptions or buzzwords.
+      </p>
+
+      <h3>What value do you provide immediately?</h3>
+      <p>
+        I reduce chaos. I identify what should be automated, what should be governed, and what
+        should not be built at all. This saves time, protects reputation, and accelerates
+        decision-making.
+      </p>
+
+      <h3>Who do you work best with?</h3>
+      <p>
+        Teams that are scaling, adopting AI seriously, or dealing with operational complexity.
+        Especially leadership groups that need one accountable point of truth instead of
+        fragmented opinions.
+      </p>
+
+      <h3>Why trust your judgment?</h3>
+      <p>
+        Because I don’t sell hype. I bring verified training, governance-first thinking, and
+        hands-on systems understanding. When I say yes, it’s buildable. When I say no, it’s
+        protection.
+      </p>
+    </section>
   </main>
 
   <!-- Simple lightbox for full cert view -->
@@ -101,6 +94,7 @@
     </p>
   </footer>
 
+  <!-- make sure this is here at the very end of <body> -->
   <script src="wall.js"></script>
 </body>
 </html>
