--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Andrew Davis — Certification Wall</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  https://andrew-davis-ai-portfolio.github.io/Certificate-wall/
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="fd-bg-glow"></div>
