--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <title>Andrew Davis — Certification Wall</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- ✅ THIS is the missing piece -->
+  <link rel="stylesheet" href="./style.css" />
+
 </head>
 <body>
   <div class="fd-bg-glow"></div>
