--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Andrew Davis — Certification Wall</title>
+  <title>Andrew W. Davis — CAIO · CAIIP · AI Systems Architect</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- ✅ THIS is the missing piece -->
