--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+
   <title>Andrew W. Davis — CAIO · CAIIP · AI Systems Architect</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- ✅ THIS is the missing piece -->
+  <!-- ✅ REQUIRED: CSS link -->
   <link rel="stylesheet" href="./style.css" />
-
 </head>
+
 <body>
+<header class="fd-hero">
   <div class="fd-bg-glow"></div>
 
   <header class="fd-header">
