--- a/index.html
+++ b/index.html
@@ -31,13 +31,23 @@
   </header>
 
     <main class="fd-main">
-    <section class="fd-intro">
+    <section class="fd-intro" id="fd-intro">
+  <div class="fd-intro-top">
+    <div>
       <h2>Certification Wall</h2>
-      <p>
+      <p id="fd-about-text">
         A visual ledger of verified training across AI governance, automation, cloud,
-        cybersecurity, data, and DevOps. Hover to reveal domains, click to inspect.
+        cybersecurity, data, and DevOps — designed for recruiters, hiring managers,
+        and partners who need to verify depth, not hype. Each certificate represents
+        hands-on mastery in systems that can improve real-world operations:
+        governance, automation, security, cloud, and workflow design.
       </p>
-    </section>
+    </div>
+    <button id="fd-voice-btn" class="fd-voice-btn" type="button">
+      ▶ Listen to this
+    </button>
+  </div>
+</section>
 
     <section class="fd-wall" id="fd-wall">
       <!-- Tiles are injected by wall.js -->
