--- a/index.html
+++ b/index.html
@@ -31,24 +31,28 @@
   </header>
 
     <main class="fd-main">
-    <section class="fd-intro" id="fd-intro">
+    <section class="fd-intro">
   <div class="fd-intro-top">
-    <div>
-      <h2>Certification Wall</h2>
-      <p id="fd-about-text">
-        <!-- your about text -->
+    <div id="fd-about-text">
+      <h2>What I Bring to a Business or Collaboration</h2>
+
+      <p>
+        I help organizations move from AI curiosity to AI execution without
+        creating risk, confusion, or technical debt. Many businesses are
+        overwhelmed by tools, vendors, and hype. I provide clarity by
+        translating strategy into deployable systems aligned with governance,
+        automation, and real operational needs.
+      </p>
+
+      <p>
+        Most professionals focus on either technology or leadership. I operate
+        at the intersection of both — validating real systems, not buzzwords.
+        When I say yes, it’s buildable. When I say no, it’s protection.
       </p>
     </div>
 
-    <div class="fd-voice-block">
-      <div class="fd-avatar-orbit">
-        <div class="fd-avatar-circle">
-          <img src="assets/avatar-andrew.png" alt="Andrew W. Davis avatar" />
-        </div>
-      </div>
-      <button id="fd-voice-btn" class="fd-voice-btn" type="button">
-        ▶ Listen to this
-      </button>
-    </div>
+    <button class="fd-voice-btn" id="fd-voice-btn">
+      ▶ Listen to this
+    </button>
   </div>
 </section>
