--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main class="fd-main">
     <section class="fd-intro">
   <div class="fd-intro-top">
-    <div id="fd-about-text">
+    <div id="fd-about-text" class="fd-about">
       <h2>What I Bring to a Business or Collaboration</h2>
 
       <p>
