--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
   </div>
 </section>
 
+<section class="fd-wall" id="fd-wall"></section>
+
 <script src="assets/wall.js"></script>
 </body>
 </html>
