--- a/index.html
+++ b/index.html
@@ -60,5 +60,29 @@
 <section class="fd-wall" id="fd-wall"></section>
 
 <script src="assets/wall.js"></script>
+
+      <script src="assets/wall.js"></script>
+
+<script>
+  (function () {
+    const btn = document.getElementById('fd-voice-btn');
+    const aboutSection = document.querySelector('.fd-about');
+
+    if (!btn || !aboutSection || !('speechSynthesis' in window)) return;
+
+    btn.addEventListener('click', () => {
+      const text = aboutSection.innerText.trim();
+      if (!text) return;
+
+      speechSynthesis.cancel();
+
+      const utterance = new SpeechSynthesisUtterance(text);
+      utterance.rate = 1;
+      utterance.pitch = 1;
+      speechSynthesis.speak(utterance);
+    });
+  })();
+</script>
+      
 </body>
 </html>
