--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     </div>
 
     <button class="fd-voice-btn" id="fd-voice-btn">
+      <button class="fd-voice-btn" id="fd-cert-btn">
+  ▶ Hear certifications
+</button>
       ▶ Listen to this
     </button>
   </div>
