--- a/index.html
+++ b/index.html
@@ -49,15 +49,17 @@
         at the intersection of both — validating real systems, not buzzwords.
         When I say yes, it’s buildable. When I say no, it’s protection.
       </p>
-    </div>
+    <div class="fd-voice-wrap">
+  <!-- Intro / About narration -->
+  <button class="fd-voice-btn" id="fd-voice-btn">
+    ▶ Listen to this
+  </button>
 
-    <button class="fd-voice-btn" id="fd-voice-btn">
-      <button class="fd-voice-btn" id="fd-cert-btn">
-  ▶ Hear certifications
-</button>
-      ▶ Listen to this
-    </button>
-  </div>
+  <!-- Certifications narration -->
+  <button class="fd-voice-btn fd-voice-btn--secondary" id="fd-cert-btn">
+    ▶ Hear certifications
+  </button>
+</div>
 </section>
 
 <section class="fd-wall" id="fd-wall"></section>
