--- a/index.html
+++ b/index.html
@@ -52,12 +52,18 @@
     <div class="fd-voice-wrap">
   <!-- Intro / About narration -->
   <button
-    class="fd-voice-btn"
-    id="fd-voice-btn"
-    onclick="window.__playIntro && window.__playIntro()"
-  >
-    ▶ Listen to this
-  </button>
+  class="fd-voice-btn"
+  id="fd-voice-btn"
+  onclick="window.__playIntro && window.__playIntro()">
+  ▶ Listen to this
+</button>
+
+<button
+  class="fd-voice-btn fd-voice-btn--secondary"
+  id="fd-cert-btn"
+  onclick="window.__playCerts && window.__playCerts()">
+  ▶ Hear certifications
+</button>
 
   <!-- Certifications narration -->
   <button
