--- a/index.html
+++ b/index.html
@@ -44,17 +44,19 @@
         automation, and real operational needs.
       </p>
 
-      <p>
-        Most professionals focus on either technology or leadership. I operate
-        at the intersection of both — validating real systems, not buzzwords.
-        When I say yes, it’s buildable. When I say no, it’s protection.
-      </p>
-    <div class="fd-voice-wrap">
+     <p>
+  Most professionals focus on either technology or leadership. I operate at the
+  intersection of both — validating real systems, not buzzwords. When I say yes,
+  it’s buildable. When I say no, it’s protection.
+</p>
+
+<div class="fd-voice-wrap">
   <!-- Intro / About narration -->
   <button
     class="fd-voice-btn"
     id="fd-voice-btn"
-    onclick="window.__playIntro && window.__playIntro()">
+    onclick="window.__playIntro && window.__playIntro()"
+  >
     ▶ Listen to this
   </button>
 
@@ -62,7 +64,8 @@
   <button
     class="fd-voice-btn fd-voice-btn--secondary"
     id="fd-cert-btn"
-    onclick="window.__playCerts && window.__playCerts()">
+    onclick="window.__playCerts && window.__playCerts()"
+  >
     ▶ Hear certifications
   </button>
 </div>
