--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 <div class="fd-voice-wrap">
   <!-- Intro / About narration -->
-  <!-- Intro / About narration -->
 <button
   class="fd-voice-btn"
   id="fd-voice-btn"
-  onclick="window.__playIntro && window.__playIntro()">
+  onclick="window.__playIntro && window.__playIntro()"
+>
   ▶ Listen to this
 </button>
 
@@ -64,7 +64,8 @@
 <button
   class="fd-voice-btn fd-voice-btn--secondary"
   id="fd-cert-btn"
-  onclick="window.__playCerts && window.__playCerts()">
+  onclick="window.__playCerts && window.__playCerts()"
+>
   ▶ Hear certifications
 </button>
 </div>
